<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kr.teamcocoa</groupId>
    <artifactId>freefight</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>cloudnet-releases</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack-repo</id>
            <url>https://jitpack.io/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
    </repositories>

    <build>
        <finalName>FreeFight</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.github.retrooper.packetevents</pattern>
                                    <shadedPattern>kr.teamcocoa.freefight.packetevents.api</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.github.retrooper.packetevents</pattern>
                                    <shadedPattern>kr.teamcocoa.freefight.packetevents.impl</shadedPattern>
                                </relocation>
                            </relocations>
                            <minimizeJar>true</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.md-5</groupId>
                <artifactId>specialsource-maven-plugin</artifactId>
                <version>1.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                        <id>remap-obf</id>
                        <configuration>
                            <srgIn>org.spigotmc:minecraft-server:1.18.2-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
                            <reverse>true</reverse>
                            <remappedDependencies>org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
                            <remappedArtifactAttached>true</remappedArtifactAttached>
                            <remappedClassifierName>remapped-obf</remappedClassifierName>
                        </configuration>
                    </execution>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                        <id>remap-spigot</id>
                        <configuration>
                            <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                            <srgIn>org.spigotmc:minecraft-server:1.18.2-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
                            <remappedDependencies>org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
            <classifier>remapped-mojang</classifier>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>kr.teamcocoa</groupId>
            <artifactId>language</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Language.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>driver</artifactId>
            <version>4.0.0-RC9</version> <!-- only needed when bom is not used -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>wrapper-jvm</artifactId>
            <version>4.0.0-RC9</version> <!-- only needed when bom is not used -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>platform-inject-api</artifactId>
            <version>4.0.0-RC9</version> <!-- only needed when bom is not used -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>platform-inject-processor</artifactId>
            <version>4.0.0-RC9</version> <!-- only needed when bom is not used -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>bridge</artifactId>
            <version>4.0.0-RC9</version> <!-- only needed when bom is not used -->
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.1.2-jre</version>
            <scope>provided</scope>
        </dependency>



        <!--        <dependency>-->
<!--            <groupId>de.dytanic.cloudnet</groupId>-->
<!--            <artifactId>cloudnet-driver</artifactId>-->
<!--            <version>3.4.0-RELEASE</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>de.dytanic.cloudnet</groupId>-->
<!--            <artifactId>cloudnet-wrapper-jvm</artifactId>-->
<!--            <version>3.4.0-RELEASE</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>de.dytanic.cloudnet</groupId>-->
<!--            <artifactId>cloudnet-cloudperms</artifactId>-->
<!--            <version>3.4.0-RELEASE</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
        <dependency>
            <groupId>kr.teamcocoa</groupId>
            <artifactId>KitManager</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/KitManager.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>kr.teamcocoa</groupId>
            <artifactId>mysql</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/MySQL.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.jumper251</groupId>
            <artifactId>AdvancedReplay</artifactId>
            <version>1.8.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Replay.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.retrooper.packetevents</groupId>
            <artifactId>spigot</artifactId>
            <version>2.2.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>kr.teamcocoa</groupId>
            <artifactId>killeffect</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/KillEffect.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>kr.teamcocoa</groupId>
            <artifactId>core</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/TeamCocoa-Core.jar</systemPath>
        </dependency>
    </dependencies>

</project>